...
    <string name="queue_title">Queue</string>
    <string name="queue_playing_from">Playing from %1$s</string>
    <string name="queue_now_playing">Now playing</string>
    <string name="queue_next_in_queue">Next in queue</string>
    <string name="queue_next_from">Next from %1$s</string>
    <string name="queue_next_up">Up next</string>
    <string name="queue_context_liked_songs">Liked songs</string>
    <string name="queue_context_downloaded_songs">Individual songs</string>
    <string name="queue_context_recently_played">Recently played</string>
    <string name="queue_empty_title">The queue is empty</string>
    <string name="queue_empty_description">Add a song or a whole album to the queue and it will show up here.</string>
    <string name="queue_remove">Remove from the queue</string>
    <string name="queue_clear">Clear queue</string>
...
